Fixed bug with wrong possible moves for player
This issue got caused because the available ingame objects for
background were set to NONE. The move check then skipped what
were possible moves. This got fixed by introducing the new
AIR object type.

This also made some changes in other classes necessary.

Co-Authored-By: J. Zitzlsperger <zitzlsperger@cip.ifi.lmu.de>